<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.super_singh.buddyapp.SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout2">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="Email address"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:text=""
            android:textSize="34sp"
            android:inputType="textEmailAddress"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_singleLineEllipsis="true"
            app:met_primaryColor="@android:color/white"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:hint="Password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:text=""
            android:textSize="34sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_singleLineEllipsis="true"
            app:met_primaryColor="@android:color/white"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/noAcc"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:id="@+id/textView" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/signup"
        android:textColor="@color/btnSignActive"
        android:layout_marginLeft="240dp"
        android:id="@+id/newUser"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/btnSignIn"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="2dp"
        app:cornerRadius="4dp"
        android:onClick="SignUp"
        app:buttonColor="@color/btnSignActive"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/textView"
        android:layout_alignStart="@+id/linearLayout2" />
</RelativeLayout>
